--- a/test-work/css/style.css
+++ b/test-work/css/style.css
@@ -476,12 +476,24 @@ h1, h2, h3, h4, h5, h6, p, ul{
     padding-left: 40px;
 }
 
-.article-img-block{
+/* .article-img-block{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+} */
 
+.why-budss-articles__line:nth-child(1) > .article-img-block:nth-child(2) > .article-img:nth-child(1){
+    position: absolute;
+    left: 72px;
+    top: 298px;
 }
 
-.article-img{
-    
+.why-budss-articles__line:nth-child(1) > .article-img-block:nth-child(2) > .article-img:nth-child(2){
+    position: absolute;
+}
+
+.why-budss-articles__line:nth-child(1) > .article-img-block:nth-child(2) > .article-img:nth-child(3){
+    position: absolute;
 }
 
 .article__header{
