--- a/test-work/css/style.css
+++ b/test-work/css/style.css
@@ -179,7 +179,7 @@ h1, h2, h3, h4, h5, h6, p, ul{
     border-radius: 16px;
     z-index: 100;
     bottom: 30px;
-    left: 17%;
+    left: 27.15%;
     animation: ani 2s forwards;
 }
 
@@ -210,8 +210,12 @@ h1, h2, h3, h4, h5, h6, p, ul{
     padding: 16px 30px;
     border-radius: 16px;
     will-change: transform;
-    transition: background-color .3s ease, border-color .3s ease, color .3s ease, fill .3s ease, transform .3s ease-in-out;
+    transition: background-color .5s ease, border-color .3s ease, color .3s ease, fill .3s ease, transform .3s ease-in-out;
     z-index: 0;
+}
+
+.cookie__btn:hover{
+    transform: scale(1.1);
 }
 
 .accept{
@@ -246,7 +250,8 @@ h1, h2, h3, h4, h5, h6, p, ul{
 }
 
 .decline:hover{
-    color: var(--greyscale-07)
+    color: var(--greyscale-07);
+    background-color: var(--greyscale-01);
 }
 
 .cookie__btn:not(:last-child){
